--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:ignore="ExtraText">
 
     <!--Titulo origen -->
     <TextView
@@ -135,15 +136,16 @@
         android:id="@+id/editnum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/texto_rbtn"
-        android:textAlignment="center"
         android:layout_marginTop="1dp"
-        android:maxLength="10"
         android:ems="10"
         android:inputType="numberDecimal"
-        app:layout_constraintTop_toBottomOf="@id/valor_convertir"
+        android:maxLength="10"
+        android:textAlignment="center"
+        android:textSize="@dimen/texto_rbtn"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/valor_convertir"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <!--boton convertir -->
     <Button
@@ -167,7 +169,6 @@
         android:layout_marginTop="50dp"
         android:layout_marginLeft="@dimen/izquierda"
         android:layout_marginRight="@dimen/derecha"
-        android:text=""
         android:background="@drawable/stilo"
         android:textAlignment="center"
         android:textSize="@dimen/texto_encabezado"
