--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,6 +141,8 @@
         android:inputType="numberDecimal"
         android:maxLength="10"
         android:textAlignment="center"
+        android:hint="Medida"
+        android:autofillHints= "Medida"
         android:textSize="@dimen/texto_rbtn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
